--- a/ShecodesBasics_FinalProject/ShecodesBasics_FinalProject/index.html
+++ b/ShecodesBasics_FinalProject/ShecodesBasics_FinalProject/index.html
@@ -19,12 +19,12 @@
           <li>About</li>
           <li>Contact Us</li>
         </ul>
-
-        <button class="header" id="button">Sign Up</button>
+        <button class="login">Login</button>
+        <button class="sign-up">Sign Up</button>
       </div>
 
       <div class="main-body">
-        <h1>Find the perfect Vacation Rental</h1>
+        <h1>Find The Perfect Vacation Rental</h1>
         <p class="best-service">
           We provide best service where you can rent a room in someone's house
           for a night, a weekend, or a week
@@ -32,25 +32,22 @@
       </div>
 
       <div class="categories">
-        <ul class="list-category">
-          <li>
-            Destination <br />
-            where are you going
-          </li>
-
-          <li>
-            Check-in <br />
-            Add dates
-          </li>
-          <li>
-            Check-out<br />
-            Add dates
-          </li>
-          <li>
-            Guest <br />
-            Add guest
-          </li>
-        </ul>
+        <div class="element">
+          <strong>Destination</strong
+          ><span class="sub"> where are you going</span>
+        </div>
+        <div class="element">
+          <strong>Check-in</strong> <span class="sub"> Add dates</span>
+        </div>
+        <div class="element">
+          <strong>Check-out</strong> <span class="sub"> Add dates</span>
+        </div>
+        <div class="element">
+          <strong>Guest</strong> <span class="sub">Add guest</span>
+        </div>
+        <div class="room-button">
+          <button>Find a Room</button>
+        </div>
       </div>
     </div>
   </body>
