creating login page

--- a/ShecodesBasics_FinalProject/ShecodesBasics_FinalProject/index.html
+++ b/ShecodesBasics_FinalProject/ShecodesBasics_FinalProject/index.html
@@ -19,7 +19,7 @@
           <li>About</li>
           <li>Contact Us</li>
         </ul>
-        <button class="login">Login</button>
+        <button class="login" onclick="window.location.href = 'form.html';">Login</button></a>
         <button class="sign-up">Sign Up</button>
       </div>
 
@@ -50,5 +50,6 @@
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
