git commit -m "Linked landing page to login page"

--- a/ShecodesBasics_FinalProject/ShecodesBasics_FinalProject/index.html
+++ b/ShecodesBasics_FinalProject/ShecodesBasics_FinalProject/index.html
@@ -19,7 +19,9 @@
           <li>About</li>
           <li>Contact Us</li>
         </ul>
-        <button class="login" onclick="window.location.href = 'form.html';">Login</button></a>
+        <a href="form.html" target="_blank">
+          <button class="login">Login</button></a
+        >
         <button class="sign-up">Sign Up</button>
       </div>
 
